<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="8dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/habit_name_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/habitNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/habit_name_hint"
            android:inputType="textCapWords"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/colorLabelText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/habit_color_label"
        android:textColor="@color/text_secondary"
        android:textSize="14sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/colorRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/redColorRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/habit_red"
            android:text="@string/color_red"
            tools:checked="true" />

        <RadioButton
            android:id="@+id/yellowColorRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/habit_yellow"
            android:text="@string/color_yellow" />

        <RadioButton
            android:id="@+id/greenColorRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/habit_green"
            android:text="@string/color_green" />

        <RadioButton
            android:id="@+id/blueColorRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/habit_blue"
            android:text="@string/color_blue" />

        <RadioButton
            android:id="@+id/orangeColorRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/habit_orange"
            android:text="@string/color_orange" />
    </RadioGroup>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/reminderSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/reminders_label" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reminderTimeButton"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/reminder_time_label" />

</LinearLayout>
